Add complete Wi-Fi menu system: - wifi-rofi.sh script with signal-based sorting - wofi style with blur effect - Updated network module with click functionality

--- a/.config/waybar/css/colors.css
+++ b/.config/waybar/css/colors.css
@@ -1,4 +1,4 @@
-@import "/home/terax/.cache/wal/colors-waybar.css";
+@import "/home/USERNAME/.cache/wal/colors-waybar.css";
 
 @define-color module-bg @background;   
 @define-color tooltip-bg @background;           
