--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,4 +1,4 @@
-@import url('/home/mkhmtcore/.cache/wal/colors-waybar.css');
+@import url('/home/terax/.cache/wal/colors-waybar.css');
 
 /* Global styles */
 window {
