--- a/.config/waybar/css/colors.css
+++ b/.config/waybar/css/colors.css
@@ -1,13 +1,10 @@
-@import "/home/USERNAME/.cache/wal/colors-waybar.css";
-
-@define-color module-bg @background;   
-@define-color tooltip-bg @background;           
-@define-color inactive @color1;               
-@define-color fg @foreground;                
-@define-color workspace-fg @fg;
-
-
-@define-color red @color2;
-@define-color blue @color3;
-@define-color yellow @color4;
-@define-color green @color6;
+@define-color bg #1e1e2e;
+@define-color fg #cdd6f4;
+@define-color red #f38ba8;
+@define-color green #a6e3a1;
+@define-color yellow #f9e2af;
+@define-color blue #89b4fa;
+@define-color module-bg rgba(30, 30, 46, 0.8);
+@define-color workspace-fg #6c7086;
+@define-color inactive #585b70;
+@define-color tooltip-bg #1e1e2e;
